--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     },
     "dependencies": {
         "fuse.js": "^6.6.2",
-        "jquery": "^3.6.4"
+        "jquery": "^3.6.4",
+        "typescript-cookie": "^1.0.4"
     }
 }
