--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
         "moduleResolution": "node",
         "resolveJsonModule": true,
         "esModuleInterop": true,
-        "lib": ["ESNext"],
+        "lib": ["ESNext", "DOM"],
         "target": "ES2015"
     }
 }
