--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "devDependencies": {
         "@types/jquery": "^3.5.16",
         "parcel": "^2.8.3",
+        "parcel-reporter-static-files-copy": "^1.5.0",
         "typescript": "^4.9.5"
     },
     "scripts": {
@@ -14,5 +15,8 @@
         "fuse.js": "^6.6.2",
         "jquery": "^3.6.4",
         "typescript-cookie": "^1.0.4"
+    },
+    "staticFiles": {
+        "staticPath": "public/"
     }
 }
