--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,10 @@
         "moduleResolution": "node",
         "resolveJsonModule": true,
         "esModuleInterop": true,
-        "lib": ["ESNext", "DOM"],
+        "lib": [
+            "ESNext",
+            "DOM"
+        ],
         "target": "ES2015"
     }
 }
