--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "kimika-songs",
     "version": "0.0.1",
     "devDependencies": {
+        "@parcel/transformer-vue": "2.8.3",
         "@types/jquery": "^3.5.16",
         "parcel": "^2.8.3",
         "parcel-reporter-static-files-copy": "^1.5.0",
@@ -14,7 +15,8 @@
     "dependencies": {
         "fuse.js": "^6.6.2",
         "jquery": "^3.6.4",
-        "typescript-cookie": "^1.0.4"
+        "typescript-cookie": "^1.0.4",
+        "vue": "^3.2.47"
     },
     "staticFiles": {
         "staticPath": "public/"
