--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
     "version": "0.0.1",
     "devDependencies": {
         "@parcel/transformer-vue": "2.8.3",
-        "@types/jquery": "^3.5.16",
         "parcel": "^2.8.3",
         "parcel-reporter-static-files-copy": "^1.5.0",
         "typescript": "^4.9.5"
@@ -13,8 +12,8 @@
         "build": "npx parcel build src/index.html --dist-dir docs/ --public-url '/kimika-songs/'"
     },
     "dependencies": {
+        "@kyvg/vue3-notification": "^2.9.0",
         "fuse.js": "^6.6.2",
-        "jquery": "^3.6.4",
         "typescript-cookie": "^1.0.4",
         "vue": "^3.2.47"
     },
