--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -14,6 +14,10 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 19
+      - name: Remove File
+        uses: JesseTG/rm@v1.0.3
+        with:
+          path: docs/
       - run: yarn install
       - run: yarn build
       - name: Commit files
