add netlify-build command

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     },
     "scripts": {
         "dev": "npx parcel src/index.html --dist-dir docs/ --open",
-        "build": "npx parcel build src/index.html --dist-dir docs/ --public-url '/kimika-songs/'"
+        "build": "npx parcel build src/index.html --dist-dir docs/ --public-url '/kimika-songs/'",
+        "build-netlify": "npx parcel build src/index.html --dist-dir docs/ --public-url '/kimika-uta-search/'"
     },
     "dependencies": {
         "@kyvg/vue3-notification": "^2.9.0",
